<resources>
    <string name="app_name">Al_Fowzan</string>

    <string name="textview_splash">Delegate</string>
    <string name="textview_login">welcome back</string>
    <string name="language_button">Sign in</string>
    <string name="forgetpassword_textview">Forgot your password ?</string>
    <string name="forgetpassword_textview1">Add your email to receive a message\nwith the new password</string>
    <string name="forgetpassword_button">Re-send</string>
    <string name="error_connection_textview">Unable to connect to the Internet</string>
    <string name="error_connection_textview1">Unable to connect to internet. Please check there is internet service then refresh the page</string>
    <string name="connection_error_button">refresh</string>
    <string name="about_compuny_textview">About app</string>
    <string name="detail_order_textview">Order details</string>
    <string name="text_no_req">Welcome</string>
    <string name="button_no_internet">welcome</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="notifications">Notifications</string>
    <string name="my_account">My account</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="order_textview">Orders</string>
    <string name="order_linearlayout_textview">offline</string>
    <string name="order_linearlayout_textview1">online</string>
    <string name="order_cardview_textview">Completed</string>
    <string name="order_cardview_textview1">pending</string>
    <string name="bottomsheet_textview">Order status</string>
    <string name="bottomsheet_textview1">Choose your current order status:</string>
    <string name="bottomsheet_textview2">Attention, you cannot undo the previous case</string>
    <string name="bottomsheet_edittext">Enter the delivery code</string>
    <string name="bottomsheet_radiogroup1">in the way</string>
    <string name="bottomsheet_radiogroup2">completed</string>
    <string name="bottomsheet_radiogroup0">Retrieved</string>
    <string name="bottomsheet_button">Confirm and save</string>
    <string name="about_compuny_textview0">welcome</string>
    <string name="about_compuny_textview2">Leave a message and we will contact\n you as soon as possible</string>
    <string name="about_compuny_edittext">Full name</string>
    <string name="about_compuny_edittext1">E-mail</string>
    <string name="about_compuny_edittext2">Mobile number</string>
    <string name="about_compuny_edittext3">Your message here</string>
    <string name="about_compuny_button">Send</string>
    <string name="detail_order_button">See the address on the map</string>
    <string name="detail_order_textview1">Order number :</string>
    <string name="detail_order_textview2">in the way</string>
    <string name="detail_order_textview3">Customer full name</string>
    <string name="detail_order_textview4">Contact</string>
    <string name="detail_order_textview5">Payment method</string>
    <string name="detail_order_textview6">Time of order</string>
    <string name="detail_order_textview7">Cost of goods (SAR)</string>
    <string name="detail_order_textview8">Delivery cost (SAR)</string>
    <string name="detail_order_textview9">Tax (SAR)</string>
    <string name="detail_order_textview10">Coupon Discount (SAR)</string>
    <string name="detail_order_textview11">Total amount</string>
    <string name="detail_order_textview12">Location information</string>
    <string name="detail_order_textview13">Governorate, District, Plot Number, Street Number, District, Building Number, Floor Number, Apartment Number</string>
    <string name="detail_order_textview14"> change request status  </string>
    <string name="statistics_textview">statistics</string>
    <string name="statistics_textview1">Sunday</string>
    <string name="statistics_textview2">Orders completed today</string>
    <string name="statistics_textview3">Orders received today</string>
    <string name="statistics_textview4">Orders returned today</string>
    <string name="statistics_textview5">All orders are made today</string>
    <string name="notification_cardview_textview">New order</string>
    <string name="notification_cardview_textview1">You have a new order from the name of the customer</string>
    <string name="notification_textview">Notifications</string>
    <string name="my_account_textview">my account</string>
    <string name="my_account_textview1">Full name of the delegate</string>
    <string name="my_account_textview2">Activate alerts</string>
    <string name="my_account_textview4">Call usا</string>
    <string name="my_account_textview5">About the application</string>
    <string name="my_account_textview6">Language</string>
    <string name="my_account_textview7">rate us</string>
    <string name="my_account_textview8">sign out</string>
    <string name="my_account_card_textview">Number of orders</string>
    <string name="my_account_card_textview1">account balance</string>
    <string name="login_edittext">E-mail</string>
    <string name="login_edittext1">password</string>
    <string name="login_textview">I forgot my password</string>
    <string name="item_order_textview">Order number</string>
    <string name="item_order_textview1">Governorate, District, Plot Number, Street Number, District, Building Number, Floor Number, Apartment Number</string>
    <string name="item_order_textview2">Total request</string>
    <string name="item_order_textview4">Order status</string>
    <string name="item_order_textview5">SR</string>
    <string name="item_order_textview6">pending</string>
    <string name="item_order_button">Change the status</string>
    <string name="dialog_textview">Congratulations</string>
    <string name="dialog_textview1">Your order has been successfully\n delivered to the client</string>
    <string name="dialog_button">Done</string>
    <string name="activity8_textview">All orders</string>
    <string name="detail_order_textview0">payment information</string>
    <string name="detail_order_textview00">Value in (SAR)</string>
    <string name="mainfragment_button">Refresh the page</string>
    <string name="detail_order_textview15">Accept order</string>
    <string name="about_compuny_textview1">
   " Mohammed Rashid Al-Fawzan and Partners Company, Commercial Registry No. (1010203756), began more than 50 years ago in the 1960s, at Najd Gallery in Al-Batha in central Riyadh, with the activity of men's clothing of all kinds, owned by the two brothers Hamdan Rashid Al-Fawzan, may God have mercy on him, and Muhammad Rashid Al-Fawzan, this was in the middle Al-Batha, near the Kuwaiti market and continued for years
Then it turned to the sentence in Al-Batha also in the wholesale market, and this was the eighties of the Gregorian calendar, with a branch in Riyadh and a branch in Jeddah and Al-Sharqiya, then the sentence expanded to branches in Qassim in Buraidah, Al-Ahsa, Medina, Khamis Mushait and Taif
It continued until the beginning of the 2000s with the opening of retail branches, and the business developed with many new brands that can be followed through the website and the store with signs of approximately 20 brands owned by the company, and it is considered one of the pioneers of underwear for men, youth and children, women and girls, and the pilgrimage for Hajj and all kinds of clothes, towels, etc. England, Spain, Egypt, Taiwan, Vietnam, China, etc. The most famous of these brands in the market, the pioneer “Proman” for underwear, Shepherd and Lampex “Abu Askari and Abu Kharouf” with English bags, Kanana from Egypt underwear, Valencia for dresses, and many brands of shemaghs
Now the company has transformed from a small Najd showroom to a closed joint stock company with a capital of 50 million riyals, and the company's shareholders, and the network of retail branches is one of the first in the market that has wholesale and retail branches, distributors and an electronic store, and has the desire and ambition to develop its business and expand."
    </string>
    <string name="notification_distance">5 km</string>
    <string name="detailorder_text">mada card</string>
    <string name="refuse">refuse</string>

</resources>
