<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F3F4F9">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:srcCompat="@drawable/ic_forgetpassword_rightarrow_last"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/error_connection_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24dp"
            android:text="@string/error_connection_textview"
            android:textColor="#303B44"
            />

        <TextView
            android:layout_marginHorizontal="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:text="@string/error_connection_textview1"
            android:textColor="#303B44"
            android:alpha=".6"
            android:gravity="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/language_button"
            android:drawableRight="@drawable/ic_connection_error_reload_image"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:text="@string/connection_error_button"
            android:textColor="@color/white"
            android:textSize="16dp"/>

    </LinearLayout>
    </ScrollView>


</LinearLayout>