<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4F9">


    <ImageView
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_gravity="start"
        app:srcCompat="@drawable/ic_forgetpassword_rightarrow"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        />


    <ImageView
            android:layout_width="253dp"
            android:layout_height="93dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/language_logo"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="55dp"
            android:textSize="22dp"
            android:textStyle="bold"
            android:text="@string/forgetpassword_textview"
            android:textColor="#D82B31"
            android:layout_marginBottom="30dp"
            />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="13dp"
        android:text="@string/forgetpassword_textview1"
        android:textColor="#5C5F63"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        />
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="@drawable/login_edittext"
            android:drawableStart="@drawable/ic_login_drawable_start_message"
            android:drawablePadding="16dp"
            android:hint="البريد الالكتروني"
            android:paddingStart="12dp" />




        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/language_button"
            android:textColor="@color/white"
            android:text="@string/forgetpassword_button"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            />






</LinearLayout>