<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4F9">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingHorizontal="13dp"
            android:paddingBottom="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_forgetpassword_rightarrow_last" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_compuny_textview"
            android:textColor="#303B44"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.588"
                app:srcCompat="@drawable/ic_call_us_image_bell" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.588"
                app:srcCompat="@drawable/ic_call_us_image_camera" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.588"
                app:srcCompat="@drawable/ic_call_us_image_face" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.588"
                app:srcCompat="@drawable/ic_call_us_image_twiter" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginBottom="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/call_us_image_hours" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_compuny_textview2"
                android:textColor="#0D1724"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="12dp"
                android:text="@string/about_compuny_textview0"
                android:textColor="#0D1724"
                android:textSize="34dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView8"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/editText10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingVertical="10dp"
        android:background="@drawable/login_edittext"
        android:hint="@string/about_compuny_edittext"
        android:paddingStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/editText11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/login_edittext"
        android:hint="@string/about_compuny_edittext1"
        android:paddingStart="10dp" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:background="@drawable/login_edittext"
      >

      <EditText
          android:id="@+id/editText12"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/login_edittext"
          android:hint="@string/about_compuny_edittext2"
          android:paddingHorizontal="10dp"
          android:paddingVertical="10dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/textView40"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView40"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="10dp"
          android:text="+965"
          android:textColor="#0D1724"
          android:textSize="15sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/imageView25"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageView
          android:id="@+id/imageView25"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="10dp"
          android:src="@drawable/a"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/editText13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/login_edittext"
        android:hint="@string/about_compuny_edittext3"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="65dp" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        />


    <Button
        android:textAllCaps="false"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/language_button"
        android:text="@string/about_compuny_button"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        />


</LinearLayout>