<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
   >


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_gravity="center_horizontal"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dialog_image" />

            <ImageView
                android:layout_marginTop="22dp"
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView15"
                app:srcCompat="@drawable/ic_dialog_image_face" />

            <TextView
                android:textColor="#494949"
                android:textSize="23dp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView15" />

            <TextView
                android:textColor="#37348D"
                android:textSize="16dp"
                android:layout_marginTop="15dp"
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_textview1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <Button
                android:id="@+id/button_dialog"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/dialog_button_shape"
                android:text="@string/dialog_button"
                android:textColor="#FFFFFF"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView23"
                app:layout_constraintStart_toStartOf="@+id/textView23"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>